# coursework

./: .env.example  README.md  main.py  pyproject.toml
data/: operations.xlsx  reports.jsonl
src/: reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
