[project]
name = "coursework"
version = "0.1.0"
description = ""
authors = [
    {name = "IgnatyevaA",email = "shyra9072@gmail.com"}
]
packages = [{include = "src"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "alpha-vantage (>=3.0.0,<4.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "coverage (>=7.8.0,<8.0.0)",
    "pytest-cov (>=6.1.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[black]
line-length = 119
exclude = ".git"
[isort]
line-length = 119

[mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"


[flake8]
max-line-length = 119
exclude = ".git"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pandas = "^2.2.3"


